syntax = "proto3";

option java_multiple_files=true;
option java_package = "billing";

service BillingService {
rpc CreateBillingAccount(CreateBillingAccountRequest) returns (CreateBillingAccountResponse);
}

message CreateBillingAccountRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}
message CreateBillingAccountResponse {
  string accountId = 1;
  string status = 2;
}